--- a/Fruit-Catcher1-main/index.html
+++ b/Fruit-Catcher1-main/index.html
@@ -5,22 +5,22 @@
     <script src="libraries/matter.js"></script>
     <script src="libraries/p5.play.js"></script>
   <!-- The core Firebase JS SDK is always required and must be listed first -->
-<script src="https://www.gstatic.com/firebasejs/7.22.1/firebase-app.js"></script>
-<script src="https://www.gstatic.com/firebasejs/7.22.1/firebase-database.js"></script>
-
+<!-- The core Firebase JS SDK is always required and must be listed first -->
+<script src="https://www.gstatic.com/firebasejs/8.3.0/firebase-app.js"></script>
+<script src="https://www.gstatic.com/firebasejs/8.3.0/firebase-database.js"></script>
 <!-- TODO: Add SDKs for Firebase products that you want to use
      https://firebase.google.com/docs/web/setup#available-libraries -->
 
 <script>
   // Your web app's Firebase configuration
   var firebaseConfig = {
-    apiKey: "AIzaSyBrdCPvUTSZnUEXgutVZ3z6oH3krs_YPPs",
-    authDomain: "fruit-catcher-8d506.firebaseapp.com",
-    databaseURL: "https://fruit-catcher-8d506.firebaseio.com",
-    projectId: "fruit-catcher-8d506",
-    storageBucket: "fruit-catcher-8d506.appspot.com",
-    messagingSenderId: "564483151171",
-    appId: "1:564483151171:web:53e6168446873f03ea0bf6"
+    apiKey: "AIzaSyAaQbWysBIhC5hfoJVa-W8TWsBPg6oDzSQ",
+    authDomain: "fruit-37e3a.firebaseapp.com",
+    databaseURL: "https://fruit-37e3a-default-rtdb.firebaseio.com",
+    projectId: "fruit-37e3a",
+    storageBucket: "fruit-37e3a.appspot.com",
+    messagingSenderId: "46188521788",
+    appId: "1:46188521788:web:9b506afafcf2ac49b61639"
   };
   // Initialize Firebase
   firebase.initializeApp(firebaseConfig);
